// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Opacity Equivalent definitions all produce 0.5 opacity 1`] = `
[
  0.7,
  0,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Opacity Equivalent definitions all produce 0.5 opacity 2`] = `
[
  0.7,
  0,
  0,
  0.07,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Opacity Equivalent definitions all produce 0.5 opacity 3`] = `
[
  0.7,
  0,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
